@@ -1,7 +1,7 @@
 .\"
-.\" $Id: cpuid.man,v 20060208 2006/02/26 11:24:00 todd $
+.\" $Id: cpuid.man,v 20060313 2006/03/13 08:37:00 todd $
 .\"
-.TH CPUID 1 "26 Februrary 2006" "20060226"
+.TH CPUID 1 "13 March 2006" "20060313"
 .SH NAME 
 cpuid \- Dump CPUID information for each CPU
 .SH SYNOPSIS
