@@ -1,3 +1,8 @@
+Mon Mar 13 2006 Todd Allen <todd.allen@etallen.com>
+	* cpuid.c: Fixed code that distinguished processors based on
+	  presence or absence of L3 cache.  Some of the cache codes weren't
+	  being recognized as L3 cache.
+
 Sun Feb 26 2006 Todd Allen <todd.allen@etallen.com>
 
 	* Made new release.
